src/test/ui/regions/regions-nested-fns-2.nll.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/regions-nested-fns-2.rs:18:25
   |
LL |         |z| {
   |           - has type `&'0 isize`
LL |             //~^ ERROR E0373
LL |             if false { &y } else { z }
   |                         ^ `y` would have to be valid for `'0`
LL |         });
LL | }
   | - but `y` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
